modification for CDC to pulsar sink