@@ -56,9 +56,11 @@ dependencies {
     testAnnotationProcessor "io.micronaut:micronaut-inject-java"
     implementation("javax.annotation:javax.annotation-api")
 
-    implementation("io.micronaut.cassandra:micronaut-cassandra:3.1.0")
+    //implementation("io.micronaut.cassandra:micronaut-cassandra:3.1.0")
     //implementation("org.apache.cassandra:cassandra-all:4.0-alpha2")
-    implementation("com.strapdata.cassandra:cassandra-all:4.0-beta3-SNAPSHOT")
+    //implementation("org.apache.cassandra:cassandra-all:4.0-beta3-SNAPSHOT")
+    //implementation("com.strapdata.cassandra:cassandra-all:3.11.9")
+    implementation("org.apache.cassandra:cassandra-all:4.0-beta5-SNAPSHOT")
     implementation("io.debezium:debezium-core:1.4.0.Final")
     implementation "io.micronaut:micronaut-http-client-core"
 }
@@ -75,7 +77,23 @@ task runLocalPulsar(type: JavaExec) {
     classpath = sourceSets.main.runtimeClasspath
     main = mainClassName
     //jvmArgs = [ "-Djavax.net.debug=all" ]
-    jvmArgs '-Dmicronaut.environments=localpulsar'
+    jvmArgs = ['-Dmicronaut.environments=localpulsar',
+            '-Djdk.attach.allowAttachSelf=true',
+            '--add-exports', 'java.base/jdk.internal.misc=ALL-UNNAMED',
+            '--add-exports', 'java.base/jdk.internal.ref=ALL-UNNAMED',
+            '--add-exports', 'java.base/sun.nio.ch=ALL-UNNAMED',
+            '--add-exports', 'java.management.rmi/com.sun.jmx.remote.internal.rmi=ALL-UNNAMED',
+            '--add-exports', 'java.rmi/sun.rmi.registry=ALL-UNNAMED',
+            '--add-exports', 'java.rmi/sun.rmi.server=ALL-UNNAMED',
+            '--add-exports', 'java.sql/java.sql=ALL-UNNAMED',
+            '--add-opens', 'java.base/java.lang.module=ALL-UNNAMED',
+            '--add-opens', 'java.base/jdk.internal.loader=ALL-UNNAMED',
+            '--add-opens', 'java.base/jdk.internal.ref=ALL-UNNAMED',
+            '--add-opens', 'java.base/jdk.internal.reflect=ALL-UNNAMED',
+            '--add-opens', 'java.base/jdk.internal.math=ALL-UNNAMED',
+            '--add-opens', 'java.base/jdk.internal.module=ALL-UNNAMED',
+            '--add-opens', 'java.base/jdk.internal.util.jar=ALL-UNNAMED',
+            '--add-opens', 'jdk.management/com.sun.management.internal=ALL-UNNAMED']
     mainClass = "$mainClassName"
 }
 
